--- a/example/web/index.html
+++ b/example/web/index.html
@@ -53,6 +53,7 @@
     if ('serviceWorker' in navigator) {
       // Service workers are supported. Use them.
       window.addEventListener('load', function () {
+        navigator.serviceWorker.register('/unifiedpush-worker.js');
         // Wait for registration to finish before dropping the <script> tag.
         // Otherwise, the browser will load the script multiple times,
         // potentially different versions.
